[project]
name = "pifbot"
version = "1.0.0"
description = "Reddit bot for automated giveaways (PIFs) on r/Wetshaving"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.28",
    "geopy>=2.4",
    "pandas>=2.0",
    "plotly>=5.15",
    "Pillow>=10.0",
    "praw>=7.7",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "pydantic-settings>=2.14.1",
]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pre-commit>=3.8",
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = [
    "pifbot",
    "check_comment",
    "finalize",
    "karma",
    "pif_stats",
    "poker",
]
ignore_errors = true


